--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,16 @@
 :root {
+	--primary-text-color: rgba(255, 255, 255, 0.85);
+	--primary-bg-color: #242a37;
+	--primary-border: 1px solid #ffffffaa;
+	--code-bg: rgb(67, 105, 135);
+
 	font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
 	line-height: 1.5;
 	font-weight: 400;
 
 	color-scheme: light dark;
-	color: rgba(255, 255, 255, 0.87);
-	background-color: #242424;
+	color: var(--primary-text-color);
+	background-color: var(--primary-bg-color);
 
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
@@ -15,8 +20,129 @@
 
 body {
 	margin: 0;
-	display: flex;
-	place-items: center;
 	min-width: 320px;
 	min-height: 100vh;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+pre {
+	margin: 0;
+}
+
+pre {
+	position: relative;
+	padding: 1rem;
+	background: var(--code-bg);
+	white-space: pre-wrap;
+	overflow-wrap: break-word;
+	&:hover {
+		cursor: pointer;
+	}
+	&:active {
+		transition: 0.2s all;
+		filter: brightness(1.1);
+	}
+}
+
+#root {
+	margin: 0;
+	height: 100%;
+}
+
+.app-container {
+	display: flex;
+	width: 100%;
+	height: 100vh;
+	/* grid-template-columns: 300px 1fr; */
+}
+
+.options-container {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	border-right: var(--primary-border);
+	min-width: 300px;
+}
+
+.main-container {
+	flex: 1;
+}
+
+.header {
+	padding: 0.5rem 1rem;
+	border-bottom: var(--primary-border);
+	text-align: center;
+}
+
+.main-content {
+	padding: 0.5rem 1rem;
+}
+
+.swatch-container {
+	display: flex;
+	width: 100%;
+	height: 64px;
+}
+
+.flex-row {
+	display: flex;
+}
+
+.flex-column {
+	display: flex;
+	flex-direction: column;
+}
+
+.gap-1 {
+	gap: 0.25rem;
+}
+
+.gap-2 {
+	gap: 0.5rem;
+}
+
+.gap-3 {
+	gap: 0.75rem;
+}
+
+.gap-4 {
+	gap: 1rem;
+}
+
+.p-1 {
+	padding: 0.25rem;
+}
+
+.p-2 {
+	padding: 0.5rem;
+}
+
+.p-3 {
+	padding: 0.75rem;
+}
+.p-4 {
+	padding: 1rem;
+}
+
+.align-center {
+	align-items: center;
+}
+
+.copy-icon {
+	position: absolute;
+	right: 1rem;
+	top: 50%;
+	transform: translateY(-50%);
+	display: flex;
+	padding: 0.4rem 0.4rem;
+	border: var(--primary-border);
+	border-radius: 6px;
+	background-color: #ffffff33;
+	font-size: 1rem;
 }
