can now toggle between main content

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,8 @@
 	--primary-text-color: rgba(255, 255, 255, 0.85);
 	--primary-bg-color: #242a37;
 	--primary-border: 1px solid #ffffffaa;
-	--code-bg: rgb(67, 105, 135);
+	--code-bg: #087f8c;
+	--button-bg: #8a7090;
 
 	font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
 	line-height: 1.5;
@@ -37,7 +38,7 @@ pre {
 
 pre {
 	position: relative;
-	padding: 1rem;
+	padding: 1.5rem;
 	background: var(--code-bg);
 	white-space: pre-wrap;
 	overflow-wrap: break-word;
@@ -47,6 +48,24 @@ pre {
 	&:active {
 		transition: 0.2s all;
 		filter: brightness(1.1);
+	}
+}
+
+button {
+	border-radius: 4px;
+	transition: 0.2s all;
+	background: #ffffff00;
+	border: none;
+	padding: 0.5rem;
+	text-transform: uppercase;
+
+	&:hover {
+		background: #ffffff22;
+		cursor: pointer;
+	}
+
+	&.selected {
+		background: var(--code-bg);
 	}
 }
 
@@ -72,7 +91,7 @@ pre {
 .main-container {
 	flex: 1;
 	display: grid;
-	grid-template-rows: 1fr 1fr;
+	grid-template-columns: 1fr 1fr;
 }
 
 .header {
@@ -146,4 +165,15 @@ pre {
 	border-radius: 6px;
 	background-color: #ffffff33;
 	font-size: 1rem;
+}
+
+.gradient-text {
+	background: linear-gradient(90deg, #ff7e5f, #feb47b);
+	background-color: var(--primary-text-color);
+	background-size: 100%;
+	background-clip: text;
+	-webkit-background-clip: text;
+	-moz-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	-moz-text-fill-color: transparent;
 }
