--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,7 @@ pre {
 }
 
 button {
+	color: var(--primary-text-color);
 	border-radius: var(--radius-md);
 	transition: 0.2s all;
 	background: #ffffff00;
@@ -82,6 +83,7 @@ button {
 input,
 textarea,
 select {
+	color: var(--primary-text-color);
 	padding: 0.5rem;
 	border: none;
 	background: var(--bg-highlight);
@@ -92,7 +94,8 @@ select {
 	}
 }
 
-input[type='checkbox'] {
+input[type='checkbox'],
+input[type='radio'] {
 	margin-right: 0.5rem;
 	accent-color: var(--primary-color);
 }
