fixed legends and readout

--- a/src/index.css
+++ b/src/index.css
@@ -314,3 +314,67 @@ nav {
 	margin: 3px;
 	border-top: 1px solid var(--_main-font-color);
 }
+
+#legendContainer {
+	position: absolute;
+	top: 50%;
+	right: 0;
+	transform: translateY(-50%);
+	display: flex;
+	align-items: center;
+	background-color: var(--_x4d-overlay-translucent);
+}
+
+#dynamicLegendItems {
+	position: absolute;
+	top: 50%;
+	right: 0;
+	transform: translateY(-50%);
+	display: flex;
+	flex-direction: column;
+	background: #fefefe;
+	font-size: 0.75rem;
+	padding: 0.25rem 0.5rem;
+	gap: 0.25rem;
+	pointer-events: none;
+	cursor: default;
+}
+
+#staticLegendItems {
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: flex;
+	flex-direction: column;
+	background: #fefefe;
+	font-size: 0.75rem;
+	padding: 0.25rem 0.5rem;
+	gap: 1rem;
+	pointer-events: none;
+	cursor: default;
+}
+
+.static-legend-title,
+.dynamic-legend-title {
+	font-weight: 700;
+	text-align: center;
+	border-bottom: 1px solid #000000aa;
+}
+
+.dynamic-legend-items,
+.static-legend-items {
+	display: flex;
+	gap: 0.25rem;
+	align-items: center;
+}
+
+.static-legend-container {
+	display: flex;
+	gap: 1rem;
+}
+
+.dynamic-legend-items-color,
+.static-legend-items-color {
+	width: 0.75rem;
+	height: 0.75rem;
+}
