--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,10 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+* {
+	box-sizing: border-box;
+}
+
 body {
 	margin: 0;
 	min-width: 320px;
@@ -105,6 +109,12 @@ label {
 	.checked {
 		color: var(--secondary-color);
 	}
+}
+
+input[type='color'] {
+	padding: 0;
+	width: 5rem;
+	height: 2.5rem;
 }
 
 input[type='radio'] {
